#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([tsp] , [0.01], [anton.bossenbroek@mac.com pstralen@science.uva.nl], [tsp])
AM_INIT_AUTOMAKE(foreign)
AC_CONFIG_SRCDIR([src/tsp.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

AC_LANG([C])

AM_PATH_GSL

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT

